<resources>
    <string name="app_name" translatable="false">FMassStorage</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_root_checker">RootCheckerActivity</string>
    <string name="checking_for_root">Checking for root</string>
    <string name="this_program_wasn_t_allowed_to_use_superuser_privileges">This program wasn\'t allowed to use superuser privileges</string>
    <string name="request_it">Request it</string>
    <string name="request_root">Request root</string>
    <string name="image_icon">Image icon</string>
    <string name="create_new_image">Create new image</string>
    <string name="eject">Eject</string>
    <string name="download_image">Download image</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="path">Path:</string>
    <string name="label">Label:</string>
    <string name="enabled">Enabled</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_directory_from_directory_picker">Add directory from directory picker</string>
    <string name="add_directory_manually">Add directory manually</string>
    <string name="add_directory">Add directory</string>
    <string name="image_directories">Image directories</string>
    <string name="configure_image_directories">Configure image directories</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="directory_not_exist">Directory not exist</string>
    <string name="cannot_find_directory_path_add_it_manualy">Cannot find directory path, add it manually</string>
    <string name="directory">Directory</string>
    <string name="directory_wasnt_selected">Directory wasn\'t selected</string>
    <string name="please_define_directory_name">Please define directory name</string>
    <string name="format">Format</string>
    <string name="size_mb">Size, mb</string>
    <string name="file_system">File system</string>
    <string name="resize">Resize</string>
    <string name="cannot_find_lun_file">Cannot find lun file</string>
    <string name="disallow_debugging_while_hosting_images">Disallow debugging while hosting images</string>
    <string name="allow_debugging_while_hosting_images">Allow debugging while hosting images</string>
    <string name="adb_while_hosting">ADB while hosting</string>
    <string name="hoast_as_cd_drive">Host as CD drive</string>
    <string name="read_only">Read only</string>
    <string name="fail_device_in_use">Failed, device is in use</string>
</resources>