<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.nekocwd.fmassstorage.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main">
        <argument
            android:name="label"
            app:argType="string"
            android:defaultValue=""
            />
        <argument
            android:name="dirId"
            app:argType="integer"
            android:defaultValue="-1"
            />

        <action
            android:id="@+id/action_main2createnew"
            app:destination="@id/CreateNewImageFragment" />
        <action
            android:id="@+id/action_Main2Setting"
            app:destination="@id/SettingFragment" />
        <action
            android:id="@+id/action_MainFragment_to_DirSettingsFragment"
            app:destination="@id/DirSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/DirSettingsFragment"
        android:name="com.nekocwd.fmassstorage.settings.DirectorySettingFragment"
        android:label="@string/configure_image_directories"
        tools:layout="@layout/fragment_directory_setting"/>
    <fragment
        android:id="@+id/CreateNewImageFragment"
        android:name="com.nekocwd.fmassstorage.main.EditFragment"
        android:label="@string/edit_image"
        tools:layout="@layout/fragment_create_new_image">
        <argument
            android:name="label"
            app:argType="string"
            android:defaultValue=""
            />
        <argument
            android:name="dirId"
            app:argType="integer"
            android:defaultValue="-1"
            />
        <action
            android:id="@+id/action_createnew2main"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:label="@string/settings"
        android:id="@+id/SettingFragment"
        android:name="com.nekocwd.fmassstorage.settings.SettingsFragment">
    </fragment>
</navigation>