<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dirPathView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/dirLabelView" />

    <TextView
        android:id="@+id/dirLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textSize="16sp"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enabled"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dirPathText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:singleLine="true"
        android:scrollHorizontally="true"
        app:layout_constraintBottom_toBottomOf="@+id/dirPathView"
        app:layout_constraintEnd_toStartOf="@+id/enabled"
        app:layout_constraintStart_toEndOf="@+id/dirPathView"
        app:layout_constraintTop_toTopOf="@+id/dirPathView"
        tools:text="/storage/emulated/0/MassStorageImages" />

    <TextView
        android:id="@+id/dirLabelText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dirLabelView"
        app:layout_constraintEnd_toStartOf="@+id/enabled"
        app:layout_constraintStart_toEndOf="@+id/dirLabelView"
        app:layout_constraintTop_toTopOf="@+id/dirLabelView"
        app:layout_constraintVertical_bias="0.0"
        tools:text="MassStorageImages" />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        app:tint="?attr/colorOnBackground" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>