<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.DirectorySettingFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="100"
        tools:listitem="@layout/item_directory_list" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addManuallyFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:contentDescription="@string/add_directory_manually"
        android:src="@drawable/ic_baseline_create_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/addFab"
        app:layout_constraintEnd_toEndOf="@+id/addFab"
        tools:visibility="visible"
        android:focusable="true" />

    <TextView
        android:id="@+id/addManuallyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_directory_manually"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/addManuallyFab"
        app:layout_constraintEnd_toStartOf="@+id/addManuallyFab"
        app:layout_constraintTop_toTopOf="@+id/addManuallyFab"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addDirectoryFromDirectoryPickerFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/add_directory_from_directory_picker"
        android:src="@drawable/ic_baseline_folder_open_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/addManuallyFab"
        app:layout_constraintEnd_toEndOf="@+id/addManuallyFab"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/addDirectoryFromDirectoryPickerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_directory_from_directory_picker"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/addDirectoryFromDirectoryPickerFab"
        app:layout_constraintEnd_toStartOf="@+id/addDirectoryFromDirectoryPickerFab"
        app:layout_constraintTop_toTopOf="@+id/addDirectoryFromDirectoryPickerFab"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_directory"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:rotation="45" />

    <TextView
        android:id="@+id/noDirectories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_directories"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>