<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statusContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_usb_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_icon" />

        <TextView
            android:id="@+id/imageLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imagePath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck"
            tools:text="Image label" />

        <TextView
            android:id="@+id/imagePath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:text="/path/to/image.img" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/colorBackground"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/statusContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="200"
        tools:listitem="@layout/item_image_list">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createNewFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_create_24"
        android:visibility="gone"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/addFab"
        app:layout_constraintEnd_toEndOf="@+id/addFab"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/createNewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/create_new_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/createNewFab"
        app:layout_constraintEnd_toStartOf="@+id/createNewFab"
        app:layout_constraintTop_toTopOf="@+id/createNewFab"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/downloadImageFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_cloud_download_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/createNewFab"
        app:layout_constraintEnd_toEndOf="@+id/createNewFab"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/downloadImageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/download_image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/downloadImageFab"
        app:layout_constraintEnd_toStartOf="@+id/downloadImageFab"
        app:layout_constraintTop_toTopOf="@+id/downloadImageFab"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/image_icon"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_24"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/statusContainer"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:rotation="45"
        tools:visibility="visible"/>
        <!--Not implemented yet:)-->

</androidx.constraintlayout.widget.ConstraintLayout>